Fix figure title on

--- a/flaskstarter/templates/tasks/show_search_plot.html
+++ b/flaskstarter/templates/tasks/show_search_plot.html
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-lg justify-content-center">
         <div class="row justify-content-center" style="padding-top: 100px">
-          <div class="boldauto36">Cell Type Proportion</div>
+          <div class="boldauto36">Barplot of Cell Type Counts</div>
         </div>
         <div class="row justify-content-center">
           <div id="chart" class="chart"></div>
@@ -19,7 +19,7 @@
       </div>
       <div class="col-lg justify-content-center">
         <div class="row justify-content-center" style="padding-top: 100px">
-          <div class="boldauto36">Severity Proportion</div>
+          <div class="boldauto36">Barplot of Severity Counts</div>
         </div>
         <div class="row justify-content-center">
           <div id="chart2" class="chart"></div>
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="col-lg justify-content-center">
         <div class="row justify-content-center" style="padding-top: 100px">
-          <div class="boldauto36">Outcome Proportion</div>
+          <div class="boldauto36">Barplot of Disease Outcome Counts</div>
         </div>
         <div class="row justify-content-center">
           <div id="chart3" class="chart"></div>
@@ -38,7 +38,7 @@
       </div>
       <div class="col-lg justify-content-center">
         <div class="row justify-content-center" style="padding-top: 100px">
-          <div class="boldauto36">Gender Proportion</div>
+          <div class="boldauto36">Barplot of Gender Counts</div>
         </div>
         <div class="row justify-content-center">
           <div id="chart6" class="chart"></div>
@@ -49,7 +49,7 @@
     <div class="row">
       <div class="col-lg justify-content-center">
         <div class="row justify-content-center" style="padding-top: 100px">
-          <div class="boldauto36">Age Proportion</div>
+          <div class="boldauto36">Barplot of Age Counts</div>
         </div>
         <div class="row justify-content-center">
           <div id="chart4" class="chart"></div>
@@ -57,7 +57,7 @@
       </div>
       <div class="col-lg justify-content-center">
         <div class="row justify-content-center" style="padding-top: 100px">
-          <div class="boldauto36">Symptoms Proportion</div>
+          <div class="boldauto36">Histogram of Days from Onset of Symptoms</div>
         </div>
         <div class="row justify-content-center">
           <div id="chart5" class="chart"></div>
