change cell numbers to reflect in manuscript

--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -29,7 +29,7 @@
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group.png')}}" width="64" height="64" /></div>
             <div class="item2">
-                <h2 id="animatedCellCount">{{counting[4].count}}</h2>
+                <h2 id="animatedCellCount">4899035</h2>
             </div>
             <div class="item3">Cells</div>
         </div>
@@ -43,7 +43,7 @@
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group 36.png')}}" width="64" height="64" /></div>
             <div class="item2">
-                <h2 id="animatedDatasetCount">{{counting[0].count}}</h2>
+                <h2 id="animatedDatasetCount">20</h2>
             </div>
             <div class="item3">Datasets</div>
         </div>
