--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -29,7 +29,7 @@
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group.png')}}" width="64" height="64" /></div>
             <div class="item2">
-                <h2 id="animatedCellCount">4899035</h2>
+                <h2 id="animatedCellCount">{{counting[4].count}}</h2>
             </div>
             <div class="item3">Cells</div>
         </div>
@@ -43,7 +43,7 @@
         <div class="dash-item">
             <div class="item1"><img src="{{url_for('static', filename='Group 36.png')}}" width="64" height="64" /></div>
             <div class="item2">
-                <h2 id="animatedDatasetCount">20</h2>
+                <h2 id="animatedDatasetCount">{{counting[0].count}}</h2>
             </div>
             <div class="item3">Datasets</div>
         </div>
@@ -79,10 +79,10 @@
     animateValue(obj, 0, {{ counting[4].count }}, 5000);
 
     const obj2 = document.getElementById("animatedDonorCount");
-    animateValue(obj2, 0, 4899035, 5000);
+    animateValue(obj2, 0, {{ counting[2].count }}, 5000);
 
     const obj3 = document.getElementById("animatedDatasetCount");
-    animateValue(obj3, 0, 20, 5000);
+    animateValue(obj3, 0, {{ counting[0].count }}, 5000);
 
     var typed = new Typed('.typed', {
         typeSpeed: 50,
