--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -76,13 +76,13 @@
     }
 
     const obj = document.getElementById("animatedCellCount");
-    animateValue(obj, 0, {{ counting[4].count }}, 5000);
+    animateValue(obj, 0, 4899035, 5000);
 
     const obj2 = document.getElementById("animatedDonorCount");
     animateValue(obj2, 0, {{ counting[2].count }}, 5000);
 
     const obj3 = document.getElementById("animatedDatasetCount");
-    animateValue(obj3, 0, {{ counting[0].count }}, 5000);
+    animateValue(obj3, 0, 20, 5000);
 
     var typed = new Typed('.typed', {
         typeSpeed: 50,
