--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-4">
       <div class="boldauto64">Dataset distribution</div>
-      <div class="regularH160">Our dataset covers data of single-cell immunology Of SARS-CoV-2 infection from China,
+      <div class="regularH160">Our data sets cover data of single-cell immunology of SARS-CoV-2 infection from China,
         Europe, America and ... You may click the region on the map to check the data.</div>
       <div class="d-flex">
         <a class="exploreButton" href="{{ url_for('tasks.table_view') }}">
@@ -44,7 +44,7 @@
 <div class="section02" style="padding-bottom: 0px;">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="boldauto64" style="padding-bottom: 40px; text-transform:none;">scRNA-seq Dataset</div>
+      <div class="boldauto64" style="padding-bottom: 40px; text-transform:none;">scRNA-seq dataset</div>
       <table id="distro_data" class="table table-striped">
         <thead>
           <tr>
