--- a/flaskstarter/templates/layouts/banner.html
+++ b/flaskstarter/templates/layouts/banner.html
@@ -79,7 +79,7 @@
     animateValue(obj, 0, 4899035, 5000);
 
     const obj2 = document.getElementById("animatedDonorCount");
-    animateValue(obj2, 0, {{ counting[2].count }}, 5000);
+    animateValue(obj2, 0, 963, 5000);
 
     const obj3 = document.getElementById("animatedDatasetCount");
     animateValue(obj3, 0, 20, 5000);
