--- a/flaskstarter/templates/frontend/tutorial.html
+++ b/flaskstarter/templates/frontend/tutorial.html
@@ -10,7 +10,7 @@
     </div>
     <div class="row">
       <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
-        <div class="row tutorialTitle boldH160">How to use Covidscope?</div>
+        <div class="row tutorialTitle boldH160">How to perform downstream analysis after using Covidscope?</div>
         <div class="row container collapsible-text"
           style="padding: 30px 40px 30px 40px; border-top: 1px solid #B4B6B8;">
           <div class="row tutorialContent regularauto16">
