--- a/flaskstarter/templates/tasks/landing.html
+++ b/flaskstarter/templates/tasks/landing.html
@@ -8,12 +8,12 @@
       <div id="map" style="height: 45vh"></div>
     </div>
     <div class="col-4">
-      <div class="boldauto64">Dataset distribution</div>
+      <div class="boldauto64">Data sets distribution</div>
       <div class="regularH160">Our data sets cover data of single-cell immunology of SARS-CoV-2 infection from China,
         Europe, America and ... You may click the region on the map to check the data.</div>
       <div class="d-flex">
         <a class="exploreButton" href="{{ url_for('tasks.table_view') }}">
-          <div class="mediumauto22">Explore dataset</div>
+          <div class="mediumauto22">Explore data sets</div>
         </a>
       </div>
     </div>
@@ -27,10 +27,10 @@
       <div class="col-4" style="padding-top: 50px;">
         <div class="boldauto64">Cell type distribution</div>
         <div class="regularH160">We have gathered data of multivarious cell types, including CD4 T, CD14 Mono, Nk, etc.
-          You may explore more and generate scFeature/ UMAP graph on our Explore page.</div>
+          You may explore more and generate scFeature and UMAP graph on our Explore page.</div>
         <div class="d-flex">
           <a class="exploreButton" href="{{ url_for('tasks.table_view') }}">
-            <div class="mediumauto22">Explore dataset</div>
+            <div class="mediumauto22">Explore data sets</div>
           </a>
         </div>
       </div>
@@ -44,7 +44,7 @@
 <div class="section02" style="padding-bottom: 0px;">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="boldauto64" style="padding-bottom: 40px; text-transform:none;">scRNA-seq dataset</div>
+      <div class="boldauto64" style="padding-bottom: 40px; text-transform:none;">Overview of scRNA-seq data sets</div>
       <table id="distro_data" class="table table-striped">
         <thead>
           <tr>
@@ -89,8 +89,8 @@
   <div class="container flex-column">
     <div class="regularS22">What is Covidscope?</div>
     <div class="intro-c">
-      Covidscope stores and provides over 4.9 million
-      single-cell data by 21 published single-cell sequencing datasets. Anyone
+      Covidscope stores and provides over 4.8 million
+      single-cell data from 20 published single-cell sequencing data sets. Anyone
       can explore the insights from our analysis and download the data provided
       here for further analysis.
     </div>
@@ -119,7 +119,7 @@
           </td>
           <td></td>
           <td>
-            <p>Download and citation</p>
+            <p>Download and analyse</p>
           </td>
         </tr>
       </table>
