--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -121,7 +121,7 @@
             <div style="margin-top: 10px;">
                 <button class="lightButton" name="show_plot" style="display:inline-block ; margin-right: 15px;"
                     title='Bar Charts of cell type, severity, days from onset and outcome' onclick="showSearchPlot()">
-                    Show cell count meta
+                    Show data characteristics
                 </button>
             </div>
             <div style="margin-top: 10px; margin-right: 15px;">
@@ -596,6 +596,10 @@
                     $searchButton = $('#btnGSearch')
                         .text('search')
                         .click(function () {
+                            // if( !(input.val()) ) {
+                            //     console.log("input is null")
+                            //     alert("Please select a value from the dropdown box!");
+                            // }
                             self.search(input.val()).draw();
                         }),
                     $clearButton = $('#btnGClear')
