--- a/flaskstarter/templates/tasks/show_plot.html
+++ b/flaskstarter/templates/tasks/show_plot.html
@@ -16,7 +16,7 @@
 <div class="section03">
   <div class="container" style="margin:0px; padding: 0px;">
     <div class="row justify-content-center">
-      <div class="boldauto36">UMAP Plot</div>
+      <div class="boldauto36">UMAP plot</div>
     </div>
     <div class="row justify-content-center" style="padding: 30px 0px">
       <form id="form_gene" action="{{ url_for('tasks.show_plot')}}" method="post">
