--- a/flaskstarter/templates/tasks/show_scfeature.html
+++ b/flaskstarter/templates/tasks/show_scfeature.html
@@ -16,7 +16,7 @@
 <div class="section03">
   <div class="container" style="margin:0px; padding: 0px;">
     <div class="row justify-content-center">
-      <div class="boldauto36">scFeature Plots</div>
+      <div class="boldauto36">scFeature plots</div>
     </div>
     <!-- <td>Cell type</td>
     <td>
@@ -61,7 +61,7 @@
 
       <button id="idbtnSelectcolor" name="btnSelectcolor" type="submit" onclick="loading();" class="darkButton"
         style="margin-left:16px;" form="form_sCf">
-        Select </button>
+        Select both</button>
     </div>
 
     <div class="row" style="border: 0.5px solid #B4B6B8; width: 100vw; margin-left:-200px"></div>
