Edit the function of download all

--- a/flaskstarter/templates/tasks/naso_tableview.html
+++ b/flaskstarter/templates/tasks/naso_tableview.html
@@ -1,6 +1,6 @@
 {% from "macros/_form.html" import render_form %}
 
-{% set page_title = 'My Tasks' %}
+{% set page_title = 'Explore' %}
 
 {% extends 'layouts/base.html' %}
 
@@ -72,7 +72,7 @@
                     <input type="button" class="btn btn-primary" style="display:inline-block" value="Clear" id="btnClear" />
                      </td>
                      <td>
-                    <button class="btn btn-primary" style="display:inline-block" id="btnAdvance">Advanced Search</button>
+                    <button class="btn btn-primary" style="display:inline-block" class="hidden" id="btnAdvance">Advanced Search</button>
                     </td>
                 </tr>
 
