Edit the spelling error

--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -186,7 +186,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class=" boldauto36">
-                        Dowload form
+                        Download form
                     </div>
                 </div>
                 <div class="filterContent row justify-content-center">
