add video tutorial

--- a/flaskstarter/templates/frontend/tutorial.html
+++ b/flaskstarter/templates/frontend/tutorial.html
@@ -10,11 +10,12 @@
     </div>
     <div class="row">
       <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
-        <div class="row tutorialTitle boldH160">How to perform downstream analysis after using Covidscope?</div>
+        <div class="row tutorialTitle boldH160">Guide to use Covidscope?</div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cGNOjUovm5c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="row container collapsible-text"
           style="padding: 30px 40px 30px 40px; border-top: 1px solid #B4B6B8;">
           <div class="row tutorialContent regularauto16">
-            Find the tutorial in following link ....
+            Also find the down-stream analysis tutorial in following link after you downloaded data from Covidscope ....
           </div>
           <div class="row tutorialLink">
             <a
