minor text change

--- a/flaskstarter/templates/frontend/tutorial.html
+++ b/flaskstarter/templates/frontend/tutorial.html
@@ -10,7 +10,7 @@
     </div>
     <div class="row">
       <div class="container tutorialCard collapsible" style="padding: 0px; margin-bottom: 24px;">
-        <div class="row tutorialTitle boldH160">Guide to use Covidscope?</div>
+        <div class="row tutorialTitle boldH160">Guide to use Covidscope Webserver（Video)</div>
         <div class="row justify-content-center">
         <iframe width="1680" height="945" src="https://www.youtube.com/embed/cGNOjUovm5c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
