Covidscope official LITE version is created to avoid heavy computation from dynamic matrix file generation

--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -172,11 +172,11 @@
                         matrix</a>
                 </div>
             </div>
-            <div id="matrixDownloadButton" style="margin: 10px 15px 0px 0px;">
+            <!-- <div id="matrixDownloadButton" style="margin: 10px 15px 0px 0px;">
                 <button class="mediumButton download" name="download_matrix" type="submit" style="display:inline-block;"
                     form="downloadMatrix">
                     Download matrix </button>
-            </div>
+            </div> -->
         </div>
 
         <div class="overlay" id="DownloadMatrixForm">
