Disable Download Matrix

--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -164,19 +164,19 @@
                         Download metadata </button>
                 </form>
             </div>
-            <div id="matrixFormButton" style="margin: 10px 15px 0px 0px;">
+            <!-- <div id="matrixFormButton" style="margin: 10px 15px 0px 0px;">
                 <form id="downloadMatrix" class="download" action="{{ url_for('tasks.download_matrix')}}" method="post">
                 </form>
                 <div class="mediumButton" style="display:inline-block;" onclick="showDLform()"><a
                         href="#DownloadMatrixForm">Download
                         matrix</a>
                 </div>
-            </div>
-            <!-- <div id="matrixDownloadButton" style="margin: 10px 15px 0px 0px;">
+            </div> -->
+            <div id="matrixDownloadButton" style="margin: 10px 15px 0px 0px;">
                 <button class="mediumButton download" name="download_matrix" type="submit" style="display:inline-block;"
                     form="downloadMatrix">
                     Download matrix </button>
-            </div> -->
+            </div>
         </div>
 
         <div class="overlay" id="DownloadMatrixForm">
