Try adding cookie alert and scfeature sub sampler

--- a/flaskstarter/static/css/template.css
+++ b/flaskstarter/static/css/template.css
@@ -965,3 +965,21 @@ body {
     margin-top: 20px;
     margin-bottom: 45px;
 }
+
+.cookie-alert {
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    width: 320px;
+    margin: 0 !important;
+    z-index: 999;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: all 500ms ease-out;
+  }
+  
+  .cookie-alert.show {
+    opacity: 1;
+    transform: translateY(0%);
+    transition-delay: 1000ms;
+  }
