--- a/flaskstarter/templates/tasks/table_view.html
+++ b/flaskstarter/templates/tasks/table_view.html
@@ -767,6 +767,18 @@
         $("#loadingbox").show();
     }
   // ]]></script>
-
+<!-- Limit select box dataset -->
+<!-- <script type="text/javascript">
+    $(document).ready(function() {
+        var last_valid_selection = null;
+        $('#opt_dataset').change(function(event) {
+            if ($(this).val().length > 3) {
+            $(this).val(last_valid_selection);
+            } else {
+                last_valid_selection = $(this).val();
+            }
+        });
+    });
+</script> -->
 
 {% endblock %}
